Add commented-out placeholder options + default ramlimit to 512MB

--- a/rootfs/lczero/resources/lc0.config
+++ b/rootfs/lczero/resources/lc0.config
@@ -1,4 +1,8 @@
 backend=multiplexing
+#backend-opts=blas_cores=4
+#threads=4
+ramlimit-mb=512
+#weights=/lczero/resources/networks/some_network
 syzygy-paths=/lczero/resources/syzygy-tables
 ponder=true
 verbose-move-stats=true
