--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -29,12 +29,15 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       -
-        name: Build and push docker image
-        uses: docker/build-push-action@v3
+        name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
         with:
-          context: .
+          registry: ghcr.io
+          username: ${{github.actor}}
+          password: ${{secrets.PAT_TOKEN}}
+      -
+        name: Build and push
+        uses: docker/bake-action@v3.0.1
+        with:
+          files: build/docker-bake.hcl
           push: true
-          pull: true
-          tags: nlss/lczero:latest
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
