--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 
 services:
   server:
-    image: nlss/lczero
+    image: ghcr.io/n0rthernl1ghts/lc0:latest
     ports:
       - "3333:3333/tcp"
     volumes:
