--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       LCZERO_PONDER: "true"
       LCZERO_VERBOSE_MOVE_STATS: "true"
       LCZERO_BACKEND_OPTS: "blas_cores=4"
+      LCZERO_NETWORK_SHA: "d3afb47455f4318c397bbe257f4b149de497df6cf53dc142cf863bb4981cae05"
     volumes:
       - "./data/networks:/lczero/resources/networks"
       - "./data/logs:/lczero/logs"
