--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,8 @@ services:
     ports:
       - "3333:3333/tcp"
     environment:
-      LCZERO_BACKEND: "multiplexing"
+      LCZERO_BACKEND: "blas"
+      LCZERO_BACKEND_OPTS: "blas_cores=4"
       LCZERO_THREADS: 2
       LCZERO_RAM_LIMIT_MB: 512
       LCZERO_VERBOSE_MOVE_STATS: "true"
