--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.8"
 
 services:
-  server:
+  engine:
     image: ghcr.io/n0rthernl1ghts/lc0:latest
     ports:
       - "3333:3333/tcp"
