--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,12 @@ services:
     deploy:
       restart_policy:
         condition: on-failure
+    healthcheck:
+      test: "/lczero/bin/healthcheck || exit 1"
+      interval: 30s
+      retries: 3
+      start_period: 20s
+      timeout: 5s
 
 networks:
   default:
