--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -7,7 +7,7 @@ ARG LCZERO_REPOSITORY=https://github.com/LeelaChessZero/lc0.git
 workdir /tmp
 
 ADD ["https://bootstrap.pypa.io/get-pip.py", "/tmp/get-pip.py"]
-COPY ["./patches/${LCZERO_VERSION}/meson.build.alpine-patch", "/tmp/meson.build.patch"]
+COPY ["./patches/${LCZERO_VERSION}/meson.build.patch", "/tmp/meson.build.patch"]
 
 RUN set -eux \
     && apk add git alpine-sdk bash ninja openblas-dev protoc protobuf-dev cmake gcompat gtest-dev python3 \
@@ -16,7 +16,7 @@ RUN set -eux \
     && pip install meson \
     && cd lczero \
     && patch --verbose "meson.build" <"/tmp/meson.build.patch" \
-    && ./build.sh
+    && CXXFLAGS=-U_FORTIFY_SOURCE ./build.sh
 
 
 
