--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -32,7 +32,7 @@ COPY --from=ghcr.io/n0rthernl1ghts/s6-rootfs:2.2 ["/", "/"]
 FROM --platform=${TARGETPLATFORM} alpine:3.18
 
 RUN set -eux \
-    && apk add --update --no-cache ca-certificates curl netcat-openbsd openblas-dev \
+    && apk add --update --no-cache libstdc++ ca-certificates curl netcat-openbsd openblas \
     && adduser --shell /bin/false --disabled-password --gecos "LCZero User" --home "/lczero" "lczero"
 
 COPY --from=rootfs ["/", "/"]
