--- a/Dockerfile.debian
+++ b/Dockerfile.debian
@@ -51,7 +51,7 @@ FROM --platform=${TARGETPLATFORM} debian:11-slim AS lczero-service
 RUN set -eux \
     && export DEBIAN_FRONTEND=noninteractive \
     && apt-get update \
-    && apt-get install ca-certificates curl netcat libopenblas-dev --yes --no-install-recommends \
+    && apt-get install ca-certificates curl netcat libopenblas-base --yes --no-install-recommends \
     && adduser --shell /bin/false --disabled-password --gecos "LCZero User" --home "/lczero" "lczero" \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/ /var/cache/* /var/log/*
