--- a/Dockerfile.debian
+++ b/Dockerfile.debian
@@ -61,9 +61,9 @@ COPY --from=rootfs ["/", "/"]
 ARG LCZERO_VERSION
 LABEL maintainer="Aleksandar Puharic <aleksandar@puharic.com>" \
       org.opencontainers.image.source="https://github.com/N0rthernL1ghts/lczero-docker" \
-      org.opencontainers.image.description="LcZero ${LCZERO_VERSION} (lc0) - Build ${TARGETPLATFORM}" \
+      org.opencontainers.image.description="LcZero ${LCZERO_VERSION} (lc0) - Debian Build ${TARGETPLATFORM}" \
       org.opencontainers.image.licenses="MIT" \
-      org.opencontainers.image.version="${LCZERO_VERSION}"
+      org.opencontainers.image.version="${LCZERO_VERSION}-debian"
 
 # s6-overlay configuration
 ENV S6_KEEP_ENV=1
