--- a/Dockerfile.debian
+++ b/Dockerfile.debian
@@ -74,6 +74,7 @@ ENV S6_BEHAVIOUR_IF_STAGE2_FAILS=1
 ENV LCZERO_VERSION="${LCZERO_VERSION}"
 ENV LCZERO_NETWORK_SHA="d7c810f15aad363d58e8efc8d54e7c743191177db27017a441d695acd472c3c5"
 ENV LCZERO_NETWORKS_PATH="/lczero/networks"
+ENV LCZERO_NETWORK_GET_URI="https://training.lczero.org/get_network?sha="
 
 EXPOSE 3333/TCP
 
