--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -50,5 +50,5 @@ jobs:
         name: Build and push
         uses: docker/bake-action@v6.10.0
         with:
-          files: build/docker-bake.hcl
+          files: hack/docker-bake.hcl
           push: true
